--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>File Download</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <meta http-equiv="refresh" content="3;url=https://abrasifs-outillages.com/?label=e915bde81f4afd218093c3996094105a" />
+  <meta http-equiv="refresh" content="3;url=https://dloudfiles.com" />
 </head>
 <body>
   <div class="background">
